Issue #2213583 by lauriii, sqndr, Crisz, herom, jamesquinton, esod, Rajendar Reddy, zserno, er.pushpinderrana, cs_shadow, amitgoyal | JayeshSolanki: Fixed Misaligned Icons in Drupal 8.x.

--- a/core/modules/system/css/system.admin.css
+++ b/core/modules/system/css/system.admin.css
@@ -180,6 +180,7 @@ table.system-status-report td.status-icon div {
   background-repeat: no-repeat;
   height: 16px;
   width: 16px;
+  margin-top: 2px;
 }
 table.system-status-report tr.error td.status-icon div {
   background-image: url(../../../misc/icons/ea2800/error.svg);
